<resources>
    <string name="app_name">CatalystCafe</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="contact">Contact</string>
    <string name="_12_hours_n_9_a_m_9_p_m_nsunday_holiday">12 Hours \n(9 A.M - 9 P.M)\nSunday Holiday</string>
    <string name="hours">Hours</string>
    <string name="chinese_n_italian_n_grill_n_arabain">*Chinese \n*Italian \n*Grill \n*Arabain</string>
    <string name="description">Description</string>
    <string name="phone_9876543210">Phone:9876543210</string>
    <string name="address">Address</string>
    <string name="email_catalyst_apple_in">Email:catalyst@apple.in</string>
    <string name="catalyst_cafe_m_g_road_nthrissur_kerala_680001">Catalyst Cafe,M G Road,\nTHrissur,Kerala-680001</string>
</resources>
