<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cat"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        android:fontFamily="sans-serif-black"
        android:textSize="30sp"
        android:layout_below="@id/imageView"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="261dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView7"
        android:textSize="20sp"
        android:layout_toRightOf="@id/textView7"
        android:text="@string/email_catalyst_apple_in"
        android:layout_toEndOf="@id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_9876543210"
        android:layout_toRightOf="@id/textView7"
        android:textSize="20sp"
        android:layout_below="@id/textView8"
        android:layout_toEndOf="@id/textView7" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:fontFamily="sans-serif-black"
        android:textSize="30sp"
        android:layout_below="@id/textView9"/>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/catalyst_cafe_m_g_road_nthrissur_kerala_680001"
        android:layout_toRightOf="@id/textView7"
        android:textSize="20sp"
        android:layout_below="@id/textView10"


        android:layout_toEndOf="@id/textView7" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:fontFamily="sans-serif-black"
        android:textSize="30sp"
        android:layout_below="@id/textView11"/>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chinese_n_italian_n_grill_n_arabain"
        android:layout_toRightOf="@id/textView7"
        android:textSize="20sp"
        android:layout_below="@id/textView12"

        android:layout_toEndOf="@id/textView7" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hours"
        android:fontFamily="sans-serif-black"
        android:textSize="30sp"
        android:layout_below="@id/textView13"
        />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_12_hours_n_9_a_m_9_p_m_nsunday_holiday"
        android:layout_toRightOf="@id/textView7"
        android:textSize="20sp"
        android:layout_below="@id/textView14"
        android:layout_toEndOf="@id/textView7" />


</RelativeLayout>